# 2do-txt

./: .env  .env.development  .eslintrc.cjs  .eslintrc.js  .eslintrc.json  .gitignore  .prettierignore  .releaserc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.e2e  README.md  capacitor.config.ts  components.json  craco.config.js  eslint.config.mjs  i18next-parser.config.js  index.html  jest.config.js  knip.json  package-lock.json  package.json  playwright.config.ts  pwa-assets.config.ts  release.config.js  tailwind.config.js  tsconfig.eslint.json  tsconfig.json  vercel.sh  vite.config.ts  vitest.config.ts
.github/: dependabot.yml  renovate.json
.run/: All Tests.run.xml  Debug.run.xml  Playwright (Chromium file).run.xml  Playwright (Chromium, Clipboard).run.xml  Playwright (Chromium, current file).run.xml  Playwright (Safari, Clipboard).run.xml  Playwright (Safari, current file).run.xml  Playwright (current file).run.xml  Playwright (title in clipboard).run.xml  Run all Tests.run.xml  Run owncloud.run.xml  Test.run.xml
electron/: .gitignore  afterSign.js  capacitor.config.ts  electron-builder.config.json  package.json
ios/: .gitignore
public/: index.html  manifest.json  manifest.webmanifest  splashscreen.html  sw.js  todo-large.txt  todo.txt
resources/: todo.txt
src/: App.tsx  ConfirmationDialog.tsx  i18next.d.ts  index.css  index.tsx  react-app-env.d.ts  setupTests.ts  sw.ts
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: encryption.rs  main.rs  oauth.rs  safe_storage.rs  secure_storage.rs  splashscreen.rs
(+508 files in other folders)
